--- a/StardewValley/CalendarWindow.xaml
+++ b/StardewValley/CalendarWindow.xaml
@@ -39,7 +39,13 @@
                         <Setter Property="BorderThickness" Value="1"></Setter>
                         <Setter Property="Width" Value="100"></Setter>
                         <Setter Property="Height" Value="70"></Setter>
-
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="BorderBrush" Value="OrangeRed"></Setter>
+                                <Setter Property="BorderThickness" Value="2"></Setter>
+                                <Setter Property="Foreground" Value="OrangeRed"></Setter>
+                            </Trigger>
+                        </Style.Triggers>
                     </Style>
                 </WrapPanel.Resources>
                 <Label x:Name="Label1">1</Label>
