--- a/StardewValley/CalendarWindow.xaml
+++ b/StardewValley/CalendarWindow.xaml
@@ -12,13 +12,14 @@
 
             <StackPanel>
                 <StackPanel.Resources>
+                    <local:MainWindow x:Key="seasons"/>
                     <Style TargetType="Label">
                         <Setter Property="BorderBrush" Value="Black"></Setter>
                         <Setter Property="Width" Value="100"></Setter>
                         <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
                     </Style>
                 </StackPanel.Resources>
-                <Label x:Name="SeasonsTime" HorizontalContentAlignment="Center">Spring</Label>
+                <Label x:Name="SeasonsTime" HorizontalContentAlignment="Center" Content="{Binding Path=PartOfSeasons}"></Label>
                 <WrapPanel Height="25" Width="700" VerticalAlignment="Top" >
                     <Label  BorderThickness="1,1,0,0">M</Label>
                     <Label  BorderThickness="0,1,0,0">T</Label>
@@ -34,7 +35,7 @@
                 <WrapPanel.Resources>
                     <Style TargetType="Label">
                         <Setter Property="FontSize" Value="36"></Setter>
-                        <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+                        <Setter Property="HorizontalContentAlignment" Value="Center" ></Setter>
                         <Setter Property="BorderBrush" Value="Black"></Setter>
                         <Setter Property="BorderThickness" Value="1"></Setter>
                         <Setter Property="Width" Value="100"></Setter>
